main.sass
h1
  font-size: 30px
  margin: 10px 0 15px 0

h2
  font-size: 20px
  text-align: center
  margin: 8px 0 10px 0

@mixin fulllayer
  position: absolute
  top: 0
  left: 0
  bottom: 0
  right: 0

$black: black
$red: red

$gradient-opacity: 0.3
$clippath-animation-duration: 0.7s

#content
  > .container
    max-width: 996px
    margin: 12px auto
    padding: 6px

.you-draw-it
  margin: 30px 0
  position: relative

  #gradient-black
    .start
      stop-color: $black
      stop-opacity: $gradient-opacity
    .end
      stop-color: $black
      stop-opacity: 0

  #gradient-red
    .start
      stop-color: $red
      stop-opacity: $gradient-opacity
    .end
      stop-color: $red
      stop-opacity: 0

  clipPath
    rect
      transition: width $clippath-animation-duration

  .axis
    opacity: .5

  .line
    fill: none
    stroke-width: 3

    &.black
      stroke: $black

    &.red
      stroke: $red

  .area
    &.black
      fill: url(#gradient-black)
    &.red
      fill: url(#gradient-red)

  .dots
    circle
      transition: opacity 0.3s

    .black
      fill: $black

    .red
      fill: $red

  .labels
    @include fulllayer
    pointer-events: none

    .data-label
      position: absolute
      transition: opacity 0.3s

      span
        position: relative
        margin-top: -43px
        left: -50%
        padding: 5px 15px
        color: white
        display: block
        text-align: center
        line-height: 16px
        white-space: nowrap

      &:after
        border: solid transparent
        content: " "
        height: 0
        width: 0
        position: absolute
        pointer-events: none
        border-color: rgba(136, 183, 213, 0)
        border-width: 12px 6px
        margin-left: -6px

      &.black
        span
          background-color: $black
        &:after
          border-top-color: $black

      &.red
        span
          background-color: $red
        &:after
          border-top-color: $red

  .titles
    @include fulllayer
    pointer-events: none
    padding-top: 20px

    span
      display: block
      position: absolute
      text-align: center
      text-transform: uppercase
      white-space: pre-line
      line-height: 1.5
      font-size: 14px

  .grid
    .domain
      stroke-width: 0

    .tick line
      stroke-dasharray: 1,1
      opacity: 0.2

      &.highlight
        opacity: 0.7

  .your-line
    stroke: #00345e
    stroke-width: 4
    stroke-dasharray: 1 7
    stroke-linecap: round
    fill: none

.question
  .result
    visibility: hidden

    button
      display: block
      margin: 20px auto
      padding: 10px 15px
      border: none
      background: #00345e
      color: white
      font-size: 18px
      cursor: pointer
      outline: none

    .text
      visibility: hidden

